--- a/app/views/admin/ads/new.html.erb
+++ b/app/views/admin/ads/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New ad</h1>
+<h1>Novo Anúncio</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_ads_path %>
+<%= link_to 'Voltar', admin_ads_path %>
