--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :nome %><br>
     <%= f.text_field :name %>
   </div>
 
   <div class="field">
-    <%= f.label :color %><br />
+    <%= f.label :cor %><br />
     <%= f.text_field :color,:class =>"pick-a-color" %>
-    
+
   </div>
-  
+
   <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label :descrição %><br>
     <%= f.text_field :description %>
   </div>
 
