--- a/app/views/admin/cities/_form.html.erb
+++ b/app/views/admin/cities/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :city %><br>
+    <%= f.label :cidade %><br>
     <%= f.text_field :city %>
   </div>
   <div class="field">
