--- a/app/views/admin/price_types/show.html.erb
+++ b/app/views/admin/price_types/show.html.erb
@@ -5,5 +5,5 @@
   <%= @price_type.name %>
 </p>
 
-<%= link_to 'Edit', edit_admin_price_type_path(@price_type) %> |
-<%= link_to 'Back', admin_price_types_path %>
+<%= link_to 'Editar', edit_admin_price_type_path(@price_type) %> |
+<%= link_to 'Voltar', admin_price_types_path %>
