--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,7 +2,7 @@
 <script type="text/javascript">
         $(function() {
 
-          alert("Coisa");   
+          alert("Coisa");
         });
 
 </script>
@@ -21,18 +21,18 @@
 
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :nome %><br>
     <%= f.text_field :name ,:class=>"form-control"%>
   </div>
 
   <div class="field">
-    <%= f.label :color %><br />
+    <%= f.label :cor %><br />
     <%= f.text_field :color,:class =>"pick-a-color" %>
-    
+
   </div>
-  
+
   <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label :descrição %><br>
     <%= f.text_field :description ,:class=>"form-control"%>
   </div>
 
