--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing category</h1>
+<h1>Editar categoria</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', admin_category_path(@category) %> |
-<%= link_to 'Back', admin_categories_path %>
+<%= link_to 'Mostrar', admin_category_path(@category) %> |
+<%= link_to 'Voltar', admin_categories_path %>
