--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,12 +1,14 @@
-<h1>Listing categories</h1>
+<section class="panel">
+  <header class="panel-heading"><h1>Lista de Categorias</h1></header>
 
 <div class="table-responsive">
   <table class="table table-hover" >
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Description</th>
-          <th>Number of ads</th>
+          <th>Nome</th>
+          <th>Descrição</th>
+          <th>Cor</th>
+          <th>Quantidade de anúncios</th>
           <th></th>
           <th></th>
           <th></th>
@@ -18,13 +20,16 @@
           <tr>
             <td><%= category.name %></td>
             <td><%= category.description %></td>
+            <td>
+              <span class="label" style="background-color: #<%= category.color %>">
+            </td>
             <td><%= category.ads.count %></td>
-            <td><%= link_to 'Show', admin_category_path(category) %></td>
-            <td><%= link_to 'Edit', edit_admin_category_path(category) %></td>
-            <td><%= link_to 'Destroy', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Editar', edit_admin_category_path(category) %></td>
+            <td><%= link_to 'Eliminar', admin_category_path(category), method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
           </tr>
         <% end %>
       </tbody>
     </table>
 <div>
 
+</section>
