--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New category</h1>
+<h1>Nova Categoria</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_categories_path %>
+<%= link_to 'Voltar', admin_categories_path %>
