--- a/app/views/admin/cities/new.html.erb
+++ b/app/views/admin/cities/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New city</h1>
+<h1>Nova Cidade</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_cities_path %>
+<%= link_to 'Voltar', admin_cities_path %>
