--- a/app/views/admin/cities/show.html.erb
+++ b/app/views/admin/cities/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>City:</strong>
+  <strong>Cidade:</strong>
   <%= @city.city %>
 </p>
 
 <p>
-  <strong>Country:</strong>
+  <strong>País:</strong>
   <%= @city.country_id %>
 </p>
 
-<%= link_to 'Edit', edit_admin_city_path(@city) %> |
-<%= link_to 'Back', admin_cities_path %>
+<%= link_to 'Editar', edit_admin_city_path(@city) %> |
+<%= link_to 'Voltar', admin_cities_path %>
