--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -19,9 +19,9 @@
   <div class="field">
     <%= f.label :username %><br />
     <%= f.text_field :username%>
-    
+
   </div>
-  
+
   <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
@@ -43,7 +43,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br>
+    <%= f.label :confirmaçao_de_password %><br>
     <%= f.password_field :password_confirmation %>
   </div>
 
