--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -15,5 +15,5 @@
 
 
 
-<%= link_to 'Edit', edit_admin_user_path(@admin_user) %> |
-<%= link_to 'Back', admin_users_path %>
+<%= link_to 'Editar', edit_admin_user_path(@admin_user) %> |
+<%= link_to 'Voltar', admin_users_path %>
