--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,10 +1,10 @@
-<h1>New category</h1>
+<h1>Nova Categoria</h1>
 
 
 <%= render 'form' %>
 
 
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Voltar', categories_path %>
 
 
