--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -6,7 +6,6 @@
 
 
     <!-- Listagem de anúncios -->
-    <div class="container" id="things">
       <div class="row">
         <ul class="thumbnails">
           <% @ads.each do |ad| %>
@@ -19,24 +18,23 @@
                     <div class="caption">
                       <% if ad.category.nil? %>
                         <span class="label" style="background-color: #888888">
-
                       <% else %>
-                        <span class="label" style="background-color: #<%= ad.category.color %>">
-                        <%= ad.category.name %>
+                        <span class="label" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>
                       <% end %>
                       </span>
+
                   <% end %>
 
                   <h2><%= link_to ad.title, ad %></h2>
                   <p><i class="fa fa-map-marker"></i> <%= ad.city.city unless ad.city.blank? %></p>
-                </div>
+                    </div>
+                  </div>
               </div>
             </li>
 
             <% end %>
           </ul>
         </div>
-      </div>
 
   </div>
 </div>
