[Update] Removed username from table user

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top" id="navbarAgro" role="navigation">
-  
+
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header" id="header-bar">
     <img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle">
@@ -13,13 +13,13 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-    
+
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    
+
     <ul class="nav navbar-nav navbar-right">
-      
+
       <!-- SEARCH -->
       <li class="dropdown messages-dropdown" >
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search"></i><b class="caret" id="dropCarret"></b> </a>
@@ -27,23 +27,23 @@
           <li class="container" id="searchBox" role="search">
             <div class="input-group" id="input-groupBox">
               <input type="text" style="vertical-align: center;" class="form-control typeahead">
-              
+
               <span class="input-group-btn">
                 <button type="submit" class="btn btn-default" id="omnisearch-btn" >Pesquisar</button>
               </span>
             </div>
           </li>
-        </ul>  
+        </ul>
       </li>
       <!-- END SEARCH -->
-      
+
 
       <!-- NOTIFICACOES -->
       <% if user_signed_in? %>
         <li class="dropdown messages-dropdown" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-globe"></i><span class="badge" id="custom-badge">3</span> <b class="caret" id="dropCarret"></b> </a>
           <ul class="dropdown-menu">
-            
+
             <li class="dropdown-header">3 New </li>
             <li class="preview">
               <a href="#">
@@ -161,7 +161,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <% image_tag current_user.avatar.url%>
-            <span id="userNick"><%= current_user.username %></span>
+            <span id="userNick"><%= current_user.name.split(" ")[0] %></span>
             <b class="caret" id="dropCarret"></b>
           </a>
 
@@ -197,7 +197,7 @@
 
           </ul>
         </li>
-         
+
 
       <% else %>
         <li><%= link_to "Login".html_safe , new_user_session_path %></li>
