--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -22,6 +22,19 @@
   }(document, 'script', 'facebook-jssdk'));
 </script>
 <!--FACEBOOK SDK END -->
+<!--TWITTER SDK START -->
+<script>
+  !function(d,s,id){
+    var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+    if(!d.getElementById(id)){
+      js=d.createElement(s);
+      js.id=id;
+      js.src=p+'://platform.twitter.com/widgets.js';
+      fjs.parentNode.insertBefore(js,fjs);
+    }
+  }(document, 'script', 'twitter-wjs');
+</script>
+<!--TWITTER SDK END -->
 
   <% num_img=@ad.ad_images.count %>
 
@@ -157,7 +170,9 @@
                 </td>
                 <td align="right">
                   <div class="fb-share-button" data-href="http://teste94.di.uminho.pt/" data-type="button"></div>
-                  <!-- div class="fb-share-button" data-href="ad_path(@ad)" data-type="button"></div -->
+                  <!-- div class="fb-share-button" data-href="<%= ad_path(@ad) %>" data-type="button"></div -->
+                  
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
                 </td>
               </tr>
               <tr>
