--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -41,7 +41,7 @@
           <%= f.label :price, "Preço" ,:class=>"control-label" %><br>
           <div class="controls">
             <div class="input-group">
-              <span class="input-group-addon">$</span>
+              <span class="input-group-addon">€</span>
               <%= f.text_field :price,:placeholder => "Preço" ,:class=>"form-control" %>
             </div>
             <label class="help-inline" id="help_ad_price"  for="ad_price"></label>
