--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,7 +50,7 @@
 
 
             </div>
-            <div class="login_form_regist_items"><%= f.submit "Entrar" ,:class=>"btn btn-lg btn-primary btn-block" %></div>
+            <div class="login_form_regist_items"><%= f.submit "Registar" ,:class=>"btn btn-lg btn-primary btn-block" %></div>
 
             <div class='login_form_regist_items'>
               <%= render "devise/shared/links"  %>
