--- a/app/views/academy/answers/_show.html.erb
+++ b/app/views/academy/answers/_show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="col-lg-12">
   <section class="panel panel-success">
     <header class="panel-heading">
@@ -28,6 +26,12 @@
       <div class="col-xs-9 col-md-10 ">
         <%= answer.text %>
       </div>
+    </div>
+
+    <div class="">
+      <%= link_to '<i class="icon-circle-arrow-up"></i>'.html_safe, academy_up_vote_path(:answer => answer) %>
+      <%= answer.up - answer.down %>
+      <%= link_to '<i class="icon-circle-arrow-down"></i>'.html_safe, academy_down_vote_path(:answer => answer) %>
     </div>
   </section>
 </div>
