--- a/app/views/academy/answers/_show.html.erb
+++ b/app/views/academy/answers/_show.html.erb
@@ -29,6 +29,7 @@
     </div>
 
     <div class="">
+      <%#  Verify if the user is logged  %>
       <%= link_to '<i class="icon-circle-arrow-up"></i>'.html_safe, academy_up_vote_path(:answer => answer) %>
       <%= answer.up - answer.down %>
       <%= link_to '<i class="icon-circle-arrow-down"></i>'.html_safe, academy_down_vote_path(:answer => answer) %>
