--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -119,7 +119,7 @@
                 <li class="divider"></li>
               <% end %>
             <% else %>
-              <li class="dropdown-header">All active ads are in order</li>
+              <li class="dropdown-header">Alertas do Mercado.</li>
             <% end %>
             <li><a href="<%= myads_user_path(current_user.id) %>"> Ver todos </a></li>
 
@@ -159,7 +159,7 @@
                 <li class="divider"></li>
               <% end %>
             <% else %>
-              <li class="dropdown-header">All active ads are in order</li>
+              <li class="dropdown-header">Alertas da Academia.</li>
             <% end %>
             <li><a href="<%= myads_user_path(current_user.id) %>"> Ver todos </a></li>
 
