--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -3,11 +3,12 @@
 <head>
   <title>Agrosocial</title>
 
-  <%= stylesheet_link_tag  "application", media: "all", "data-turbolinks-track" => true %>
-
-  <%= stylesheet_link_tag "bootstrap","sessions","data-turbolinks-track" => true %>
-
-  <%= javascript_include_tag  "jquery","jquery_ujs","jquery.fancybox","validations","lib/jquery.validate.min","bootstrap-datepicker","turbolinks","session","data-turbolinks-track" => true %>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application","user" "data-turbolinks-track" => true %>  <!--Google Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
 
 
   <link rel="shortcut icon" href="">
