--- a/app/views/academy/tutorials/_form.html.erb
+++ b/app/views/academy/tutorials/_form.html.erb
@@ -28,7 +28,7 @@
     </div>
     <div class="field">
       <%= f.label :user_id %><br>
-      <%= f.number_field :user_id %>
+      <%= f.text_field :user_id, :value => current_user.id %>
     </div>
     <div class="field">
       <%= f.label :aproved %><br>
