--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -47,12 +47,10 @@
       <a class="btn dropdown-toggle btn-warning" data-toggle="dropdown" href="#" style="width: 100%">Academia
         <span class=" icon-user"></span></a>
       <ul class="dropdown-menu">
-        <li><%= link_to "Entrar na Academia".html_safe, ads_path %></li>
-        <% if (controller_name == 'academy' || controller_name == 'questions') %>
-            <li><%= link_to "tutoriais".html_safe, academy_questions_path, ads_path %></li>
-            <li><%= link_to "workshops".html_safe, ads_path %></li>
-            <li><%= link_to "workshops".html_safe, ads_path %></li>
-        <% end %>
+        <li><%= link_to "Entrar na Academia".html_safe, academy_path %></li>
+        <li><%= link_to "Questões".html_safe, academy_questions_path %></li>
+        <li><%= link_to "Tutoriais".html_safe, academy_tutorials_path %></li>
+        <li><%= link_to "workshops".html_safe, ads_path %></li>
       </ul>
     </div>
 
