--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -171,7 +171,7 @@
                 <td align="right">
                   <div class="fb-share-button" data-href="http://teste94.di.uminho.pt/" data-type="button"></div>
                   <!-- div class="fb-share-button" data-href="<%= ad_path(@ad) %>" data-type="button"></div -->
-                  
+
                   <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
                 </td>
               </tr>
@@ -205,21 +205,21 @@
     <!-- painel dos extras do ad -->
     <section class="panel">
         <!-- headers -->
-        <header class="panel-heading navy">
-            <ul class="nav nav-tabs ">
+        <!--header class="panel-heading navy"-->
+            <ul class="nav nav-tabs">
                 <li class="active">
-                    <a data-toggle="tab" href="#related">
+                    <a data-toggle="tab" href="#related" id="extraNavButton">
                         Produtos na mesma Area
                     </a>
                 </li>
                 <li>
-                    <a data-toggle="tab" href="#reviews">
+                    <a data-toggle="tab" href="#reviews" id="extraNavButton">
                         Review do vendedor
                     </a>
                 </li>
 
             </ul>
-        </header>
+        <!--/header-->
         <!-- conteudos -->
         <div class="panel-body">
             <div class="tab-content tasi-tab">
