[Fix Bug] Login Validations / Login CSS

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
               <div class="row">
 
-                  <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :name, "Nome" %>
+                  <div class="col-md-12 login_form_regist_items"><%= f.label :name, "Nome" %>
                     <%= f.text_field :name,:id =>"name_sign_up", :class=>"form-control" %>
                      <span id="name_extra" class="textoextra"></span>
                   </div>
