--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -1,8 +1,10 @@
+
 <div class="panel panel-default">
   <div class="panel-body">
 
-    <% if user_signed_in? && (controller_name == 'ads' || (action_name=="myads")) %>
-    <div style="text-align: center">
+<% if user_signed_in? %>
+
+<div style="text-align: center">
       <% if current_user.avatar.url != nil %>
       <img src="https://secure.gravatar.com/avatar/de9b11d0f9c0569ba917393ed5e5b3ab?s=140&r=g&d=mm" class="img-circle">
       <% else %>
@@ -12,6 +14,11 @@
     <div class="row" style="margin-bottom:5px">
       <div class="col-md-8"><b style="font-size: 15px"> <%= current_user.name  %></b></div>
     </div>
+
+
+<% end -%>
+
+    <% if user_signed_in? && (controller_name == 'ads' || (action_name=="myads")) %>
     <% end %>
 
 
@@ -22,7 +29,7 @@
       </a>
       <ul class="dropdown-menu">
         <li><%= link_to "Ver Todos".html_safe , ads_path %></li>
-        <% if user_signed_in? && (controller_name == 'ads' || (action_name=="myads")) %>
+        <% if user_signed_in? %>
             <li><%= link_to "Os Meus Anúncios".html_safe , myads_user_path(current_user.id) %></li>
             <li><%= link_to "Novo Anúncio".html_safe , new_ad_path %></li>
         <% end %>
@@ -47,12 +54,10 @@
       <a class="btn dropdown-toggle btn-warning" data-toggle="dropdown" href="#" style="width: 100%">Academia
         <span class=" icon-user"></span></a>
       <ul class="dropdown-menu">
-        <li><%= link_to "Entrar na Academia".html_safe, ads_path %></li>
-        <% if (controller_name == 'academy' || controller_name == 'questions') %>
-            <li><%= link_to "tutoriais".html_safe, academy_questions_path, ads_path %></li>
-            <li><%= link_to "workshops".html_safe, ads_path %></li>
-            <li><%= link_to "workshops".html_safe, ads_path %></li>
-        <% end %>
+        <li><%= link_to "Entrar na Academia".html_safe, academy_path %></li>
+        <li><%= link_to "Perguntas".html_safe, academy_questions_path %></li>
+        <li><%= link_to "tutoriais".html_safe %></li>
+        <li><%= link_to "workshops".html_safe %></li>
       </ul>
     </div>
 
