--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -7,6 +7,8 @@
     <div class="row">
       <ul class="thumbnails">
         <% @ads.each do |ad| %>
+
+          <% if ad.is_active? %> <!-- Verifica se o anúncio ainda está activo-->
           <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
             <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
               <span class='price' ><%= ad.price %>€</span>
@@ -27,6 +29,8 @@
               </div>
             </div>
           </li>
+
+          <% end %>
         <% end %>
         <% if @ads.empty? %>
           Ainda não existem anuncios. Sê o primeiro a anunciar!
