--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,13 +6,13 @@
                            <%= devise_error_messages! %>
                               
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">About Me</label>
+                                      <label class="col-lg-2 control-label">Descricao</label>
                                       <div class="col-lg-10">
                                           <textarea name="" id="" class="form-control" cols="30" rows="10"></textarea>
                                       </div>
                                   </div>
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">Last Name</label>
+                                      <label class="col-lg-2 control-label">Ultimo Nome</label>
                                       <div class="col-lg-6">
                                            <%= f.text_field :name ,:class=>"form-control"%>
                                       </div>
@@ -30,7 +30,7 @@
                                       </div>
                                   </div>
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">Occupation</label>
+                                      <label class="col-lg-2 control-label">Occupacao</label>
                                       <div class="col-lg-6">
                                           <input type="text" class="form-control" id="occupation" placeholder=" ">
                                       </div>
@@ -74,22 +74,16 @@
                               <div class="panel-heading"> Sets New Password &amp; Avatar</div>
                               <div class="panel-body">
                                   
+                                  
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Current Password</label>
-                                          <div class="col-lg-6">
-                                              
-                                               <%= f.password_field :current_password ,:class=>"form-control",:id=>"c-pwd",:placeholder=>" " %>
-                                          </div>
-                                      </div>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">New Password</label>
+                                          <label class="col-lg-2 control-label">Nova Palavra Passe</label>
                                           <div class="col-lg-6">
                                               
                                               <%= f.password_field :password, :autocomplete => "off" ,:class=>"form-control",:id=>"n-pwd",:placeholder=>" " %>
                                           </div>
                                       </div>
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Re-type New Password</label>
+                                          <label class="col-lg-2 control-label">Rescreva Nova Palavra Passe</label>
                                           <div class="col-lg-6">
                                                <%= f.password_field :password_confirmation ,:class=>"form-control",:id=>"rt-pwd",:placeholder=>" " %>
                                           </div>
@@ -103,6 +97,24 @@
                                           </div>
                                       </div>
 
+                                      
+                                
+                              </div>
+                          </div>
+
+                          <section>
+                          <div class="panel panel-primary">
+                              
+                          <div class="panel-heading"> Salvar </div>
+                               <div class="panel-body">
+                                  <div class="form-group">
+                                          <label class="col-lg-2 control-label">Palavra Passe actual</label>
+                                          <div class="col-lg-6">
+                                              
+                                               <%= f.password_field :current_password ,:class=>"form-control",:id=>"c-pwd",:placeholder=>" " %>
+                                          </div>
+                                      </div>
+
                                       <div class="form-group">
                                           <div class="col-lg-offset-2 col-lg-10">
 
@@ -111,16 +123,19 @@
                                               
                                           </div>
                                       </div>
-                                
+                                 
                               </div>
                           </div>
+                      </section>
+
+
                           <% end %>
                       </section>
 
                       <section>
                           <div class="panel panel-primary">
                               
-                       <div class="panel-heading"> Apagar a Conta </div>
+                          <div class="panel-heading"> Apagar a Conta </div>
                                <div class="panel-body">
                                   <div class="form-group">
                                       <label class="col-lg-2 control-label">Deseja apagar a conta?</label>
