--- a/app/views/admin/ads/show.html.erb
+++ b/app/views/admin/ads/show.html.erb
@@ -53,6 +53,11 @@
 </p>
 
 <p>
+  <strong>Apagado?:</strong>
+  <%= @ad.is_deleted %>
+</p>
+
+<p>
   <strong>Cidade:</strong>
   <%= @ad.city.city %>
 </p>
