--- a/app/views/users/myads.html.erb
+++ b/app/views/users/myads.html.erb
@@ -12,6 +12,9 @@
       <div class="row">
         <ul class="thumbnails">
           <% @ads.each do |ad| %>
+
+          <% if !ad.is_deleted? %>
+
             <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
               <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
                 <span class='price' ><%= ad.price %>€</span>
@@ -35,7 +38,7 @@
                 </div>
               </div>
             </li>
-
+            <% end %>
             <% end %>
           </ul>
         </div>
