--- a/app/views/ratings/_show.html.erb
+++ b/app/views/ratings/_show.html.erb
@@ -1,6 +1,6 @@
 	<tr>
-		<td><%= rating.rater.name %></td>
-		<td><%= rating.rated.name %></td>
+		<td><%= rating.rater.email %></td>
+		<td><%= rating.rated.email %></td>
 		<td><%= rating.ad_id%></td>
-		<td><%= link_to "Atribuir Rate" , rating_path(rating)%></td>
+		<td><%= link_to "Atribuir Rate" , edit_rating_path(rating) %></td>
 	</tr>
