[Update Feature] Links Correction

--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -57,8 +57,8 @@
         <li><%= link_to "Entrar na Academia".html_safe, academy_path %></li>
 
         <li><%= link_to "Perguntas".html_safe, academy_questions_path %></li>
-        <li><%= link_to "tutoriais".html_safe %></li>
-        <li><%= link_to "workshops".html_safe %></li>
+        <li><%= link_to "Tutoriais".html_safe, academy_tutorials_path%></li>
+        <li><%= link_to "workshops".html_safe, ads_path %></li>
 
       </ul>
     </div>
