answers cant be voted by unlogged users or its owner

--- a/app/views/academy/answers/_show.html.erb
+++ b/app/views/academy/answers/_show.html.erb
@@ -29,17 +29,16 @@
     </div>
 
 <%###  answers votes  ###%>
-      <%#  Verify if the user is logged  %>
-      <% if !user_signed_in? #if not legged cant vote %>
+      <%#  Verify if the user is logged or if is the answer's owner %>
+      <% if !user_signed_in? || current_user.id == answer.user.id #if not logged or is the owner them cant vote %>
         <i class="icon-circle-arrow-up"></i>
         <%= answer.up - answer.down %>
         <i class="icon-circle-arrow-down"></i>
       <% else %>
-
+        <%= link_to '<i class="icon-circle-arrow-up"></i>'.html_safe, academy_up_vote_path(:answer => answer) %>
+        <%= answer.up - answer.down %>
+        <%= link_to '<i class="icon-circle-arrow-down"></i>'.html_safe, academy_down_vote_path(:answer => answer) %>
       <% end %>
-      <%= link_to '<i class="icon-circle-arrow-up"></i>'.html_safe, academy_up_vote_path(:answer => answer) %>
-      <%= answer.up - answer.down %>
-      <%= link_to '<i class="icon-circle-arrow-down"></i>'.html_safe, academy_down_vote_path(:answer => answer) %>
 <%###  end of answers votes  ###%>
 
   </section>
