--- a/app/views/academy/answers/_show.html.erb
+++ b/app/views/academy/answers/_show.html.erb
@@ -2,29 +2,24 @@
   <section class="panel panel-success">
     <header class="panel-heading">
       <div class="pull-right">
-        <button class="btn btn-success btn-xs">
-          <i class="icon-ok"></i>
-        </button>
-
-        <button class="btn btn-primary btn-xs">
-          <%= link_to '<i class="icon-pencil"></i>'.html_safe , edit_academy_answer_path(answer) %>
-        </button>
-
-        <button class="btn btn-danger btn-xs">
-          <i class="icon-trash "></i>
-        </button>
+        <%##  botão verde com o certo  ##%>
+        <%= link_to '<i class="icon-ok"></i>'.html_safe, "#", :class => "btn btn-success btn-xs" %>
+        <%##  botão verde com o lapis para editar a resposta  ##%>
+        <%= link_to '<i class="icon-pencil"></i>'.html_safe , edit_academy_answer_path(answer), :class => "btn btn-primary btn-xs" if answer.user.id == current_user.id %>
+        <%##  botão vermelho com o caixote para eliminar a resposta  ##%>
+        <%= link_to '<i class="icon-trash"></i>'.html_safe , edit_academy_answer_path(answer), :class => "btn btn-danger btn-xs" if answer.user.id == current_user.id %>
       </div>
-
     </header>
 
     <div class="panel-body">
-      <div class="col-xs-2 col-md-2">
-        <img class="img-circle" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=70" alt="User Pic">
+      <div class="col-xs-2 col-md-2"><%##  Avatar do user que respondeu  ##%>
+        <%= image_tag answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle" %>
         <%= answer.user.name %>
       </div>
 
-      <div class="col-xs-9 col-md-10 ">
+      <div class="col-xs-9 col-md-10 "><%##  texto da resposta  ##%>
         <%= answer.text %>
+        <br>os botões de edit e eliminar não estão direitos
       </div>
     </div>
 
