--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,10 +29,10 @@
 }
 
 .icon_rating {
-	background-image:url('carrot-image-trim.jpg');
+	background-image:url('carrot-image.png');
 
 }
 
 .icon_rating-nocolor{
-	background-image:url('carrot-image-nocolor-trim.jpg');
+	background-image:url('carrot-image-nocolor.png');
 }
